[gd_scene load_steps=3 format=2]

[ext_resource path="res://script/LevelEditor/CellControls.gd" type="Script" id=1]
[ext_resource path="res://fonts/UI_dynamicfont.tres" type="DynamicFont" id=2]

[node name="CellControls" type="HBoxContainer"]
margin_right = -1650.0
margin_bottom = -1020.0
custom_constants/separation = 10
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddCell" type="Button" parent="."]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_fonts/font = ExtResource( 2 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemoveCell" type="Button" parent="."]
margin_left = 70.0
margin_right = 130.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_fonts/font = ExtResource( 2 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShiftRowLeft" type="Button" parent="."]
margin_left = 140.0
margin_right = 200.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_fonts/font = ExtResource( 2 )
text = "<-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShiftRowRight" type="Button" parent="."]
margin_left = 210.0
margin_right = 270.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_fonts/font = ExtResource( 2 )
text = "->"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="AddCell" to="." method="_on_AddCell_pressed"]
[connection signal="pressed" from="RemoveCell" to="." method="_on_RemoveCell_pressed"]
[connection signal="pressed" from="ShiftRowLeft" to="." method="_on_ShiftRowLeft_pressed"]
[connection signal="pressed" from="ShiftRowRight" to="." method="_on_ShiftRowRight_pressed"]
